# steven

./: CMakeLists.txt  CourseCollectorCoursera.cpp  CourseCollectorCoursera.h  ICourseCollector.h  README  dbClient.cpp  dbClient.h  main.cpp  mooc_structs.h
